[package]
name = "blog_os"
version = "0.2.0"
authors = ["user <user@example.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.3"
rlibc = "1.0"
spin = "0.4.7"
x86_64 = "0.1.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

